--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -419,7 +419,7 @@
 
             <div class="text-center mt-2">
                 <button class="btn btn-danger " id="btnCancelPlaceOrder" type="button">Cancel</button>
-                <button class="btn btn-success " id="btnPlaceOrder" type="button">Place Order</button>
+                <button class="btn btn-success " id="btnPlaceOrder" type="button" disabled>Place Order</button>
             </div>
         </div>
 
