--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -270,6 +270,16 @@
 
 <section class="container-fluid" id="PlaceOrder">
     <section class="row">
+        <nav class="navbar bg-dark mt-0 ">
+            <div class="container-fluid">
+                <form class="d-flex ">
+                    <input aria-label="Search" class="form-control  me-2" placeholder="Order ID" type="search" id="orderSearchID" >
+                    <button class="btn btn-outline-success" id="searchOrder" type="button">Search</button>
+                </form>
+
+
+            </div>
+        </nav>
         <section class="col">
             <div class=" bg-secondary mt-3 ">
                 <label class="text-white m-2 fw-bold">Invoice Detail</label>
